Added sorting, filtering and pagination of sessions.
